# other-ai-assistant-or-agents

./: README.md  run_ui_test.sh  upload_image.py
Asta/: .gitignore  ASTA_MASTER_BLUEPRINT.md  Asta description.md  difference.md  output.txt  pyproject.toml
Asta/docs/: CAPABILITIES.md  COMPETITIVE_ANALYSIS.md  architecture_manifest.md  concurrency_model.md  identity_domain_spec.md
Asta/src/asta/: __main__.py  main.py
Asta/tests/: test_audio_listener.py  test_audiobook_synthesizer.py  test_docker_orchestrator.py  test_domain_spawner.py  test_high_risk_interceptor.py  test_persistent_devenv.py  test_vulnerability_scanner.py
PersonalAIOS/: .gitignore  AUDIT_AND_COMPARISON.md  __main__.py  main.py  pyproject.toml  setup.sh
PersonalAIOS/actuation_sensory/motor/: macos_controller.py  universal_controller.py
PersonalAIOS/actuation_sensory/passive/: audio_listener.py  screen_listener.py
PersonalAIOS/actuation_sensory/vision/: screen_parser.py  webcam_analyzer.py
PersonalAIOS/core_engine/goals/: async_task_queue.py  domain_spawner.py
PersonalAIOS/core_engine/logic/: sequential_solver.py
PersonalAIOS/core_engine/mcp/: __init__.py  tool_manager.py
PersonalAIOS/core_engine/orchestrator/: event_bus.py  task_coordinator.py
PersonalAIOS/core_engine/routing/: hybrid_switch.py  lora_swapper.py
PersonalAIOS/docs/: CAPABILITIES.md  memory_domain_spec.md
PersonalAIOS/feature_architecture/research/: web_scraper.py
PersonalAIOS/feature_architecture/skill_forge/: critic_evaluator.py  python_coder.py
PersonalAIOS/feature_architecture/surrogates/: email_manager.py  social_stealth.py
PersonalAIOS/identity_domain/localization/: cultural_adapter.py
PersonalAIOS/identity_domain/system_persona/: core_soul.py  socratic_tutor.py
PersonalAIOS/identity_domain/user_profile/: knowledge_tracker.py
PersonalAIOS/interfaces/cli/: terminal_console.py
PersonalAIOS/interfaces/native_ui/: avatar_websocket.py  desktop_avatar.py  menu_bar_app.py
PersonalAIOS/interfaces/onboarding/: profile_generator.py
PersonalAIOS/interfaces/voice/: __init__.py  bidirectional_transceiver.py  local_emotional_tts.py  (+1 more)
(+104 files in other folders)
